fixed next task button on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ body {
 
 #next-task {
 	width: 63px;
-	height: 63px;
 	margin: 10px;
 	font-size: 50px;
 }
